--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,30 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Primary Meta Tags -->
     <title>blogify.</title>
+    <meta name="title" content="blogify." />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Explore a personalized and interactive platform for managing your profile, sharing posts, and connecting with others. Customize your details, upload photos, and engage with a vibrant community. Join us now and enhance your online experience." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="blogify." />
+    <meta property="og:description" content="Explore a personalized and interactive platform for managing your profile, sharing posts, and connecting with others. Customize your details, upload photos, and engage with a vibrant community. Join us now and enhance your online experience." />
+    <meta property="og:image" content="/public/blogify-dark.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="blogify." />
+    <meta property="twitter:description" content="Explore a personalized and interactive platform for managing your profile, sharing posts, and connecting with others. Customize your details, upload photos, and engage with a vibrant community. Join us now and enhance your online experience." />
+    <meta property="twitter:image" content="/public/blogify-dark.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+
+    <link rel="icon" href="/blogify-dark.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
